Quick spacing fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -361,7 +361,7 @@ $wide-layout-margin: 20%;
       text-decoration: none;
       position: absolute;
       right: 0.75em;
-      top: 0.75em;
+      top: 1em;
       border: 0;
       padding: 0;
       outline: 0;
